# app/Http/Controllers/API/BookController.php
@@ -19,7 +19,7 @@ class BookController extends Controller
 {
     /** 
      * @OA\Get(
-     *     path="/api/books",
+     *     path="/api/book",
      *     tags={"book"},
      *     summary="Display a listing of the items",
      *     operationId="index",
@@ -37,7 +37,7 @@ class BookController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/books",
+     *     path="/api/book",
      *     tags={"book"},
      *     summary="Store a newly created item",
      *     operationId="store",
@@ -61,14 +61,15 @@ class BookController extends Controller
      *                      "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
      *                      "price": 85000}
      *         ),
-     *     )
+     *     ),
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
     public function store(Request $request)
     {
         try{
             $validator = Validator::make($request->all(), [
-                'title'  => 'required|unique:books',
+                'title'  => 'required|unique:book',
                 'author'  => 'required|max:100',
             ]);
             if ($validator->fails()) {
@@ -85,7 +86,7 @@ class BookController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/books/{id}",
+     *     path="/api/book/{id}",
      *     tags={"book"},
      *     summary="Display the specified item",
      *     operationId="show",
@@ -127,7 +128,7 @@ class BookController extends Controller
 
     /**
      * @OA\Put(
-     *     path="/api/books/{id}",
+     *     path="/api/book/{id}",
      *     tags={"book"},
      *     summary="Update the specified item",
      *     operationId="update",
@@ -167,6 +168,7 @@ class BookController extends Controller
      *                      "price": 85000}
      *         ),
      *     ),
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
     public function update(Request $request, $id)
@@ -178,7 +180,7 @@ class BookController extends Controller
 
         try{
             $validator = Validator::make($request->all(), [
-                'title'  => 'required|unique:books',
+                'title'  => 'required|unique:book',
                 'author'  => 'required|max:100',
             ]);
             if ($validator->fails()) {
@@ -194,7 +196,7 @@ class BookController extends Controller
 
     /**
      * @OA\Delete(
-     *     path="/api/books/{id}",
+     *     path="/api/book/{id}",
      *     tags={"book"},
      *     summary="Remove the specified item",
      *     operationId="destroy",
@@ -223,6 +225,7 @@ class BookController extends Controller
      *             format="int64"
      *         )
      *     ),
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
     public function destroy($id)
