# routes/api.php
@@ -1,11 +1,30 @@
 <?php
 
+use App\Http\Controllers\API\AuthController;
+use App\Http\Controllers\API\BookController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\API\BookController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+Route::prefix('user')->group(function(){
+    Route::get('/users', function(){
+        return $request->user();
+    });
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::get('/login', [AuthController::class, 'login'])->name('login');
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:api');
+});
 
-Route::apiResource('/books', BookController::class);
+Route::resource('book', BookController::class, [
+    'only'=>[
+        'index',
+        'show'
+    ]
+]);
+
+Route::resource('book', BookController::class, [
+    'except'=>[
+        'index',
+        'show'
+    ]
+])->middleware(['auth:api']);
